# shader-pack-editor

./: .gitignore  CMakeLists.txt  generate_lang.sh
resources/: .gitignore  gresource.xml  resources.h
resources/language/: editor.pot  editor.pot.dis
resources/language/de/: de.po  de.po~
resources/language/de/LC_MESSAGES/: editor.mo
resources/schemas/: com.continuum.nova.gschema.xml
resources/ui/: #main_ui.glade#  launcher_ui.glade  launcher_ui.glade~  main_ui.glade  main_ui.glade~
src/: main.cpp
src/application/: application.cpp  application.hpp
src/editors/: abstract_editor.hpp  generic_file_editor.cpp  generic_file_editor.hpp
src/project/: project_file_tree.cpp  project_file_tree.hpp  shader_pack_project.cpp  shader_pack_project.hpp
src/util/: file_utils.hpp  result.hpp  stream_utils.hpp  util.hpp
src/window/: glade_window.hpp  launcher_window.cpp  launcher_window.hpp  main_window.cpp  main_window.hpp
toolchains/: windows-x86_64.cmake
